adição de alguns parametros
